# agnix

./: .agnix.toml  .claude-workflow-status.json  .dockerignore  .gitignore  .plan.md  .workflow-status.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PLAN.md  README.md  SECURITY.md  SPEC.md  action.yml  audit.toml  codecov.yml  deny.toml  security-review.json  test-output.txt  test_boundary.rs  test_command.rs  test_edge.rs  test_fake_scoped.rs  test_multiple.rs  test_regex.rs  test_short_form.rs  test_unicode.txt  workflow-status.json
.claude/: plan.md  repo-map.json  settings.local.json  tasks.json  workflow-status.json
.github/: spec-baselines.json
.task/: workflow-state.json  workflow-status.json
Formula/: agnix.rb
crates/agnix-lsp/: Cargo.toml  README.md
crates/agnix-lsp/locales/: en.yml  es.yml  zh-CN.yml
crates/agnix-lsp/src/: backend.rs  code_actions.rs  completion_provider.rs  diagnostic_mapper.rs  hover_provider.rs  lib.rs  locale.rs  main.rs  position.rs  vscode_config.rs
crates/agnix-lsp/src/backend/: events.rs  helpers.rs  revalidation.rs  tests.rs
crates/agnix-lsp/tests/: lsp_integration.rs
docs/: CONFIGURATION.md  EDITOR-SETUP.md  RELEASING.md  RUSTSEC-ADVISORIES.md  TRANSLATING.md
knowledge-base/: EVALUATION.md  INDEX.md  MONTHLY-REVIEW.md  PATTERNS-CATALOG.md  README.md  RESEARCH-TRACKING.md  SECURITY-MODEL.md  VALIDATION-RULES.md  agent-config-optional-fields.md  rules.json
locales/: en.yml  es.yml  zh-CN.yml
npm/: .gitignore  README.md  index.js  install.js  package.json
scripts/: bench.sh  (+8 more)
(+246 files in other folders)
